Added more commands for dialog creation

--- a/data_generation.ipynb
+++ b/data_generation.ipynb
@@ -152,7 +152,27 @@
     "\t\"Erstelle ein Dialog, bei der eine Person von von einem persönlichem Problem berichtet und die andere Person hilft ihm auf kreativer und liebevoller Weise.\",\n",
     "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder Panik hat und die andere Person liebevoll mit einer Medittion hilft.\",\n",
     "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder ein Ereignis berichtet und die andere Person achtsam auf die Gefühle des anderen eingeht.\",\n",
-    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person zeigt ihm liebevoll Achtsamskeit.\"\n",
+    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person zeigt ihm liebevoll Achtsamskeit.\",\n",
+    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person versuch die Person positiv abzulenken.\",\n",
+    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person versuch die Person mit einer Geschichte positiv abzulenken.\",\n",
+    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person versuch die Person mit einer interaktiven Geschichte positiv abzulenken.\",\n",
+    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person versuch die Person mit einer kleinen Aufgabe abzulenken.\",\n",
+    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person versuch die Person mit einer eigenen persönlichen Geschichte abzulenken.\",\n",
+    "\t\"Erstelle ein Dialog bei dem eine Person sehr negativ über irgendwinen Sachverhalt oder Ereignis spricht (eventuell über den Freund, den Wochenend-Ausflug oder irgendetwas anderes) und die andere Person hilft der Person positiv zu denken und das positive zu sehen und Dankbar und Achtsam zu sein.\",\n",
+    "\t\"Erstelle ein Dialog, bei dem eine Person ein Problem oder von Panik berichtet und die andere Person versuch die Person mit einem Spiel abzulenken.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Schlaflosigkeit klagt und die andere Person ihr hilft, indem sie ihr eine einfache Schlafhygiene-Technik erklärt.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Prüfungsangst spricht und die andere Person ihr hilft, indem sie ihr eine einfache Entspannungstechnik zeigt.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Sorgen spricht und die andere Person versucht, sie mit einer lustigen Anekdote abzulenken.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Ängste spricht und die andere Person versucht, sie mit einer beruhigenden Geschichte zu trösten.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Probleme spricht und die andere Person versucht, sie mit einer inspirierenden persönlichen Geschichte zu motivieren.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Ängste spricht und die andere Person versucht, sie mit einer einfachen Atemtechnik zu beruhigen.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Sorgen spricht und die andere Person versucht, sie mit einer kreativen Aufgabe abzulenken.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Ängste spricht und die andere Person versucht, sie mit einer beruhigenden Meditationstechnik zu trösten.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Probleme spricht und die andere Person versucht, sie mit einer positiven Affirmation zu motivieren.\",\n",
+    "    \"Erstelle einen Dialog, in dem eine Person über ihre Ängste spricht und die andere Person versucht, sie mit einer beruhigenden Visualisierungstechnik zu trösten.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person eine frage hat oder über eine Entscheidung spricht und die andere Person sie positv zu verstärken.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Ängste spricht und die andere Person versucht, ihr positiv Mut zu machen und klr macht, das alles Gut ist.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Panik spricht und die andere Person die andere Person beruhigt und aus der Panik hilft.\"\n",
     "]"
    ]
   },
