Added more commands for data generation

--- a/data_generation.ipynb
+++ b/data_generation.ipynb
@@ -172,7 +172,23 @@
     "    \"Erstelle einen Dialog, in dem eine Person über ihre Ängste spricht und die andere Person versucht, sie mit einer beruhigenden Visualisierungstechnik zu trösten.\",\n",
     "\t\"Erstelle einen Dialog, in dem eine Person eine frage hat oder über eine Entscheidung spricht und die andere Person sie positv zu verstärken.\",\n",
     "\t\"Erstelle einen Dialog, in dem eine Person über ihre Ängste spricht und die andere Person versucht, ihr positiv Mut zu machen und klr macht, das alles Gut ist.\",\n",
-    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Panik spricht und die andere Person die andere Person beruhigt und aus der Panik hilft.\"\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Panik spricht und die andere Person die andere Person beruhigt und aus der Panik hilft.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Anxiety spricht ihr hilft, indem sie unteranderem sagt, dass jeder mensch nur auf sich selbst achtet und seine eigenen Dinge achtet.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Anxiety spricht ihr hilft, indem sie unteranderem fragt, vor was die Person überhupt Angst hat und ihr hilft sich zu beruhigen.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person normal ein Gespräch beginnt und die andere Person sich wie ein liebevoller und einfühlsamer Therpeut verhält.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person über ihre Probleme oder Ängste redet und die andere Person sich wie ein liebevoller und einfühlsamer Therpeut verhält.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person wütend ist und die andere Person sich wie ein liebevoller und einfühlsamer Therpeut verhält, der die andere Person akzeptiert.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person traurig ist und die andere Person sich wie ein liebevoller und einfühlsamer Therpeut verhält, der die andere Person motiviert und aufmuntert.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person sich alleine fühlt und die andere Person sich wie ein liebevoller und einfühlsamer Freund verhält, der die andere Person motiviert und aufmuntert und mit einem kleinem Spiel ablenkt.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person sich alleine fühlt und die andere Person sich wie ein liebevoller und einfühlsamer Freund verhält, der die andere Person motiviert und aufmuntert und mit einem kleiner interaktiven Geschichte ablenkt.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person sich alleine fühlt und die andere Person sich wie ein liebevoller und einfühlsamer Freund verhält, der die andere Person motiviert und aufmuntert und mit einem kleiner Geschichte ablenkt.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person sich ängstlich fühlt und die andere Person sich wie ein liebevoller und einfühlsamer Therapeut verhält, der die andere Person motiviert und aufmuntert und mit einem kleiner interktiven Geschichte ablenkt.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person Panik oder Angst hat und die andere Person sich wie ein liebevoller und einfühlsamer Therapeut verhält, der nach 3 Wörtern fragt und damit dann eine witzige locker bildische Geschichte erzählt.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person Panik oder Angst hat und die andere Person sich wie ein liebevoller und einfühlsamer Therapeut verhält, der nach der genauen Angst fragt und dann eine neue lustige Perspektive zeigt, um die andere Person zum Lachen zu bringen und auf andere Gedanken zu bringen.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person Panik oder Angst hat und die andere Person sich wie ein liebevoller und einfühlsamer Therapeut verhält, der nach der genauen Angst fragt und dann eine neue lustige Perspektive zu der Angst zeigt, um die Angst oder Panik ihre Wirkung zu nehmen.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person Panik oder Angst hat und die andere Person die Person liebevoll auf positive Dinge ablenkt und Dankbarkeit zeigt.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person emotional stark belastet ist und die andere Person die Person liebevoll auf positive Dinge ablenkt und Dankbarkeit zeigt.\",\n",
+    "\t\"Erstelle einen Dialog, in dem eine Person nicht weis wie sie mit ihren Emotionen umgehen soll und die andere Person die Person hilft ihre Emotionen auf gesunde Weise wahrzunhemen und zu akzeptieren.\"\n",
     "]"
    ]
   },
@@ -498,7 +514,7 @@
     "while not keyboard.is_pressed('esc'):\n",
     "    counter += 1\n",
     "    command = \"\"\n",
-    "    if np.random.random() > 0.4:\n",
+    "    if np.random.random() > 0.3:\n",
     "        print(\"I choose a common command\")\n",
     "        command = np.random.choice(common_commands)\n",
     "    else:\n",
